# plutus-fhw

./: LICENSE  README.md  cabal.project  hie.yaml  plutus-fhw.cabal
src/: InfiniteSale.hs  NFTPolicy.hs
