Cabal-Version:      2.4
Name:               plutus-fhw
Version:            0.1.0.0
Author:              Frank Hampus Weslien
Maintainer:          frankhampusweslien@gmail.com
Build-Type:          Simple
Copyright:           © 2021 Frank Hampus Weslien
License:             MIT
License-files:       LICENSE

library
  hs-source-dirs:      src
  exposed-modules:     InfiniteSale
  other-modules:       
  build-depends:       aeson
                     , base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , playground-common
                     , plutus-contract
                     , plutus-ledger
                     , plutus-ledger-api
                     , plutus-tx-plugin
                     , plutus-tx
                     , text
  default-language:    Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fno-strictness -fno-spec-constr -fno-specialise

executable hello
  hs-source-dirs:      app
  main-is:             hello.hs
  build-depends:       base ^>=4.14.1.0
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
